added some js changed the html

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
       <h1>Tic Tac Toe</h1>
       <div class="game">
         <div class="row">
-          <div class="cell" id="cell00"></div>
-          <div class="cell" id="cell01"></div>
-          <div class="cell" id="cell02"></div>
+          <button class="cell" id="cell00" onclick="move(0)"></button>
+          <button class="cell" id="cell01" onclick="move(1)"></button>
+          <button class="cell" id="cell02" onclick="move(2)"></button>
         </div>
         <div class="row">
-          <div class="cell" id="cell10"></div>
-          <div class="cell" id="cell11"></div>
-          <div class="cell" id="cell12"></div>
+          <button class="cell" id="cell10" onclick="move(3)"></button>
+          <button class="cell" id="cell11" onclick="move(4)"></button>
+          <button class="cell" id="cell12" onclick="move(5)"></button>
         </div>
         <div class="row">
-          <div class="cell" id="cell20"></div>
-          <div class="cell" id="cell21"></div>
-          <div class="cell" id="cell22"></div>
+          <button class="cell" id="cell20" onclick="move(6)"></button>
+          <button class="cell" id="cell21" onclick="move(7)"></button>
+          <button class="cell" id="cell22" onclick="move(8)"></button>
         </div>
       </div>
       <div class="message"></div>
