--- a/ttt.html
+++ b/ttt.html
@@ -9,19 +9,19 @@
       <h1>Tic Tac Toe</h1>
       <div class="game">
         <div class="row">
-          <button class="cell" id="cell0" onclick="move(0, this)"></button>
-          <button class="cell" id="cell1" onclick="move(1, this)"></button>
-          <button class="cell" id="cell2" onclick="move(2, this)"></button>
+          <button class="cell" id="cell0" onclick="move(0)"></button>
+          <button class="cell" id="cell1" onclick="move(1)"></button>
+          <button class="cell" id="cell2" onclick="move(2)"></button>
         </div>
         <div class="row">
-          <button class="cell" id="cell3" onclick="move(3, this)"></button>
-          <button class="cell" id="cell4" onclick="move(4, this)"></button>
-          <button class="cell" id="cell5" onclick="move(5, this)"></button>
+          <button class="cell" id="cell3" onclick="move(3)"></button>
+          <button class="cell" id="cell4" onclick="move(4)"></button>
+          <button class="cell" id="cell5" onclick="move(5)"></button>
         </div>
         <div class="row">
-          <button class="cell" id="cell6" onclick="move(6, this)"></button>
-          <button class="cell" id="cell7" onclick="move(7, this)"></button>
-          <button class="cell" id="cell8" onclick="move(8, this)"></button>
+          <button class="cell" id="cell6" onclick="move(6)"></button>
+          <button class="cell" id="cell7" onclick="move(7)"></button>
+          <button class="cell" id="cell8" onclick="move(8)"></button>
         </div>
       </div>
       <div class="message"></div>
