winner condition and Displaying winner added

--- a/ttt.html
+++ b/ttt.html
@@ -25,6 +25,7 @@
         </div>
       </div>
       <div class="message"></div>
+      <p id="declare"></p>
       <button class="reset">Reset Game</button>
     </div>
     <script src="script.js"></script>
